@@ -587,7 +587,7 @@ int
 main(int argc, char **argv)
 {
   GtkWidget *plug;
-  GtkWidget *plug_child;
+  GtkWidget *plug_child = NULL;
   GError    *error = NULL;
 
   #ifdef ENABLE_NLS
