@@ -1,3 +1,10 @@
+2008-10-01	Jannis Pohlmann <jannis@xfce.org>
+
+	* settings/session/{Makefile.am,session.c}, 
+	  settings/splash/{Makefile.am, splash.c},
+	  xfce4-autostart-editor/xfae-window.c: Fix unused and uninitialized
+		variable warnings. Add G_LOG_DOMAIN to the dialog makefiles.
+
 2008-10-01	Brian Tarricone <bjt23@cornell.edu>
 
 	* xfce4-session/{xfsm-startup.[ch],xfsm-properties.h,xfsm-manager.[ch]}:
